--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>main</title>
+  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+</head>
+
+<body class="stackedit">
+  <div class="stackedit__html"><h1 id="tmc">TMC</h1>
+<p><a href="https://nguyenquivinhquang.github.io/TMC/Curve%20Fitting%20&amp;%20Interpolation.html">Curve Fitting &amp; Interpolation</a></p>
+</div>
+</body>
+
+</html>
