--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="tmc">TMC</h1>
 <p><a href="https://nguyenquivinhquang.github.io/TMC/Curve%20Fitting%20&amp;%20Interpolation.html">Curve Fitting &amp; Interpolation</a><br>
-<a href="https://nguyenquivinhquang.github.io/TMC/Linear%20Equations.html">Linear equations</a></p>
+<a href="https://nguyenquivinhquang.github.io/TMC/Linear%20Equations.html">Linear equations</a><br>
+<a href="https://nguyenquivinhquang.github.io/TMC/Differentiation%20&amp;%20Integration.html">Differentiation &amp; Integration</a></p>
 </div>
 </body>
 
 </html>
+
